[tool.poetry]
name = "porygon-pipelines-adk"
version = "0.1.0"
description = "AI Agent Development Kit with data exploration capabilities"
authors = ["AnaPrec07 <your-email@example.com>"]
readme = "README.md"
packages = [{include = "root_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-secret-manager = "^2.16.0"
google-cloud-core = "^2.3.0"
google-auth = "^2.17.0"
google-api-core = "^2.11.0"
google-generativeai = "^0.8.4"
google-adk = "^1.16.0"
deprecated = "^1.2.14"
python-multipart = "^0.0.19"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.11.0"
google-cloud-aiplatform = "^1.35.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
urllib3 = "<2.0"
absl-py = "^2.3.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Add any CLI commands here if needed
deploy-remote = "deployment.remote:main"

